--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.8",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "react": "^17.0.1",
@@ -67,9 +70,12 @@
     "rollup": "^2.42.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "sass": "^1.32.8",
+    "tailwindcss": "^2.0.4",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "url-loader": "^4.1.1"
   }
 }
