--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "useful set of react hooks to manage any function component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettify": "prettier --write .",
+    "check:lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "check:typescript": "npx tsc --noEmit",
+    "check": "run-s prettify check:lint check:typescript"
   },
   "repository": {
     "type": "git",
