--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "useful set of react hooks to manage any function component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "is-ci || npx husky install",
     "prettify": "prettier --write .",
     "check:lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "check:typescript": "npx tsc --noEmit",
-    "check": "run-s prettify check:lint check:typescript"
+    "check": "run-s prettify check:lint check:typescript",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,md,html,css,scss}": "prettier --write",
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "repository": {
     "type": "git",
@@ -62,6 +72,7 @@
     "is-ci": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
