--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "check": "run-s prettify check:lint check:typescript",
     "clean:coverage": "rimraf coverage",
     "clean:reports": "rimraf reports",
+    "clean:node_modules:cache": "rimraf node_modules/.cache",
+    "clean": "run-p clean:node_modules:cache clean:coverage clean:reports",
     "pretest": "run-p clean:coverage clean:reports",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "cross-env NODE_ENV=production build-storybook -o ./dist-docs"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,md,html,css,scss}": "prettier --write",
@@ -45,10 +49,18 @@
     "react": ">= 16.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
     "@erkobridee/ts-definitions-common": "^0.6.1",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
+    "@storybook/addon-actions": "^6.2.0-rc.8",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-essentials": "^6.2.0-rc.8",
+    "@storybook/addon-links": "^6.2.0-rc.8",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-storysource": "^6.2.0-rc.8",
+    "@storybook/react": "^6.2.0-rc.8",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "@types/jest": "^26.0.21",
@@ -58,7 +70,10 @@
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "cpy-cli": "^3.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -75,7 +90,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
-    "postcss-loader": "^5.2.0",
+    "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "react": "^17.0.1",
@@ -84,7 +99,6 @@
     "rollup": "^2.42.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "sass": "^1.32.8",
     "tailwindcss": "^2.0.4",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
