feat: dist pack and docs outputs

--- a/package.json
+++ b/package.json
@@ -32,12 +32,22 @@
     "clean:build": "npx rimraf dist-pack",
     "clean": "npx run-p clean:build clean:docs clean:node_modules:cache clean:coverage clean:reports",
     "copy:readme": "npx cpy 'README.md' 'dist-pack'",
+    "copy:coverage": "npx cpy 'coverage' 'dist-docs' --parents",
+    "dist-package-json": "node ./scripts/dist-pack.js",
+    "precompile": "run-s clean:build",
     "compile": "npx rollup -c",
+    "postcompile": "run-p dist-package-json copy:readme",
     "pretest": "npx run-p clean:coverage clean:reports",
+    "build": "run-s test compile",
     "test": "jest",
     "storybook": "npx start-storybook -p 6006",
     "prebuild-storybook": "npx npx run-s clean:docs",
-    "build-storybook": "cross-env NODE_ENV=production npx build-storybook -o ./dist-docs"
+    "build-storybook": "cross-env NODE_ENV=production npx build-storybook -o ./dist-docs",
+    "ci": "npx run-p build build-storybook",
+    "postci": "npx run-s copy:coverage",
+    "predeploydocs:gh-pages": "touch dist-docs/.nojekyll",
+    "deploydocs:gh-pages": "npx gh-pages -d dist-docs --dotfiles",
+    "deploydocs": "npx run-s ci deploydocs:gh-pages"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,md,html,css,scss}": "prettier --write",
@@ -108,6 +118,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs-extra": "^9.1.0",
+    "gh-pages": "^3.1.0",
     "husky": "^5.2.0",
     "identity-obj-proxy": "^3.0.0",
     "is-ci": "^3.0.0",
