update(project): package scripts

--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "storybook": "npx start-storybook -p 6006",
     "prebuild-storybook": "npx npx run-s clean:docs",
     "build-storybook": "cross-env NODE_ENV=production npx build-storybook -o ./dist-docs",
+    "postbuild-storybook": "touch dist-docs/.nojekyll",
     "preci": "npx run-s check test",
     "ci": "npx run-p build build-storybook",
     "postci": "npx run-s copy:coverage",
-    "predeploydocs:gh-pages": "touch dist-docs/.nojekyll",
     "deploydocs:gh-pages": "npx gh-pages -d dist-docs --dotfiles",
     "deploydocs": "npx run-s ci deploydocs:gh-pages",
     "prepullrequest": "npx run-s check test",
