--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "homepage": "https://github.com/erkobridee/react-lifecycle-hooks#readme",
   "peerDependencies": {
     "react": ">= 16.8.0",
-    "@erkobridee/ts-definitions-common": "^1.0.0"
+    "@erkobridee/ts-definitions-common": ">= 1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -80,7 +80,7 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@erkobridee/ts-definitions-common": "^1.0.0",
+    "@erkobridee/ts-definitions-common": "^1.1.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
