--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "module": "./dist/esm.js"
   },
   "scripts": {
-    "postinstall": "is-ci || npx husky install",
+    "husky:uninstall": "npx rimraf .husky && git config --unset core.hooksPath",
+    "husky:install": "npx husky install",
+    "husky:config:pre-commit": "npx husky add .husky/pre-commit \"npx lint-staged\"",
+    "husky": "node scripts/husky-setup.js",
+    "prepare": "npx is-ci || npm run husky",
     "prettify": "npx prettier --write .",
     "check:lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "check:typescript": "npx tsc --noEmit",
@@ -26,15 +30,15 @@
     "clean": "npx run-p clean:build clean:docs clean:node_modules:cache clean:coverage clean:reports",
     "copy:readme": "npx cpy 'README.md' 'dist-pack'",
     "dist-package-json": "node ./scripts/dist-pack.js",
-    "precompile": "run-s clean:build",
+    "precompile": "npx run-s clean:build",
     "compile": "npx rollup -c",
-    "postcompile": "run-p dist-package-json copy:readme",
+    "postcompile": "npx run-p dist-package-json copy:readme",
     "pretest": "npx run-p clean:coverage clean:reports",
-    "build": "run-s test compile",
-    "test": "jest",
+    "build": "npx run-s test compile",
+    "test": "npx jest",
     "storybook": "npx start-storybook -p 6006",
     "prebuild-storybook": "npx npx run-s clean:docs",
-    "build-storybook": "cross-env NODE_ENV=production npx build-storybook -o ./dist-docs",
+    "build-storybook": "npx cross-env NODE_ENV=production npx build-storybook -o ./dist-docs",
     "postbuild-storybook": "touch dist-docs/.nojekyll",
     "preci": "npx run-s check test",
     "ci": "npx run-p build build-storybook",
@@ -46,11 +50,6 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,md,html,css,scss}": "prettier --write",
     "src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "repository": {
     "type": "git",
@@ -72,69 +71,70 @@
   "homepage": "https://github.com/erkobridee/react-lifecycle-hooks#readme",
   "peerDependencies": {
     "react": ">= 16.8.0",
-    "@erkobridee/ts-definitions-common": ">= 1.1.0"
+    "@erkobridee/ts-definitions-common": ">= 1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@erkobridee/ts-definitions-common": "^1.1.0",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@erkobridee/ts-definitions-common": "^1.2.0",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@storybook/addon-actions": "^6.2.0-rc.8",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@storybook/addon-actions": "^6.3.11",
     "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-essentials": "^6.2.0-rc.8",
-    "@storybook/addon-links": "^6.2.0-rc.8",
+    "@storybook/addon-essentials": "^6.3.11",
+    "@storybook/addon-links": "^6.3.11",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-storysource": "^6.2.0-rc.8",
-    "@storybook/react": "^6.2.0-rc.8",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^5.1.0",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/webpack": "^4.41.26",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
+    "@storybook/addon-storysource": "^6.3.11",
+    "@storybook/react": "^6.3.11",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.5",
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "autoprefixer": "^10.3.7",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "fs-extra": "^9.1.0",
-    "gh-pages": "^3.1.0",
-    "husky": "^5.2.0",
+    "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
+    "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
     "is-ci": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
-    "lint-staged": "^10.5.4",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.8",
-    "postcss-import": "^14.0.0",
-    "postcss-loader": "^4.1.0",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "jest": "^27.2.5",
+    "jest-junit": "^13.0.0",
+    "lint-staged": "^11.2.3",
+    "npm-run-all2": "^5.0.2",
+    "postcss": "^8.3.9",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.42.3",
+    "rollup": "^2.58.0",
     "rollup-plugin-typescript2": "^0.30.0",
-    "tailwindcss": "^2.0.4",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3",
+    "tailwindcss": "^2.2.16",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.3.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4",
     "url-loader": "^4.1.1"
   }
 }
