--- a/package.json
+++ b/package.json
@@ -125,11 +125,11 @@
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.58.0",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup": "2.68.0",
+    "rollup-plugin-typescript2": "0.31.2",
     "tailwindcss": "^2.2.16",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
